tests/snapshots/snapshots__interpreter@interp_effects.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/interp_effects.pr
---
1
2
pair = 1 then 2
row [0][1][2] done
=> ()
