tests/snapshots/snapshots__interpreter@intmap.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/intmap.pr
---
-- determinism
5
[(-100, -1000), (-3, -30), (-1, -10), (0, 0), (1, 10), (5, 50), (17, 170), (63, 630), (64, 640), (128, 1280)]
[(-100, -1000), (-3, -30), (-1, -10), (0, 0), (1, 10), (5, 50), (17, 170), (63, 630), (64, 640), (128, 1280)]
[(-100, -1000), (-3, -30), (-1, -10), (0, 0), (1, 10), (5, 50), (17, 170), (63, 630), (64, 640), (128, 1280)]
[(-100, -1000), (-3, -30), (-1, -10), (0, 0), (1, 10), (5, 50), (17, 170), (63, 630), (64, 640), (128, 1280)]
[(-100, -1000), (-3, -30), (-1, -10), (0, 0), (1, 10), (5, 50), (17, 170), (63, 630), (64, 640), (128, 1280)]
true
-- negative keys
[-9223372036854775808, -1000000, -1, 0, 1, 1000000, 9223372036854775807]
[-9223372036854775808, -1000000, -1, 0, 1, 1000000, 9223372036854775807]
[-9223372036854775808, -1000000, -1, 0, 1, 1000000, 9223372036854775807]
true
true
[-1000000, -1, 0, 1, 1000000, 9223372036854775807]
[(-9223372036854775808, -9223372036854775808), (-1000000, -1000000), (-1, -1), (0, 0), (1, 1), (1000000, 1000000), (9223372036854775807, 9223372036854775807)]
-- differential against Data.Map / Data.Set
to_list: OK, passed 60 tests.
size: OK, passed 60 tests.
lookup: OK, passed 60 tests.
delete: OK, passed 60 tests.
algebra: OK, passed 60 tests.
union: OK, passed 60 tests.
canonical: OK, passed 60 tests.
=> ()
