tests/snapshots/snapshots__interpreter@law_reader.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/law_reader.pr
---
Reader ask-ask: OK, passed 100 tests.
=> ()
