tests/snapshots/snapshots__interpreter@law_state.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/law_state.pr
---
State get-get: OK, passed 100 tests.
State put-get: OK, passed 100 tests.
State put-put: OK, passed 100 tests.
=> ()
